--- a/index.html
+++ b/index.html
@@ -12,9 +12,33 @@
       <div class="level"><b>level:</b><span class="level-number">1</span></div>
     </header>
     <main>
-      <h1 class="score"></h1>
+      <div class="numberScore">
+        <img src="IMG_20241008_182926_542.jpg" alt="" srcset="">
+        <h1 class="score"></h1>
+      </div>
       <div class="tap-score img2"></div>
     </main>
+
+    <footer>
+      <div class="cart">
+        <h1>Cart</h1>
+      </div>
+      <div class="cart">
+        <h1>Home</h1>
+      </div>
+      <div class="cart">
+        <h1>Task</h1>
+      </div>
+    </footer>
+
+    <div class="makhfi">
+      <div class="cc"></div>
+      <div class="cc"></div>
+      <div class="cc"></div>
+      <div class="cc"></div>
+      <div class="cc"></div>
+      <div class="cc"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
