--- a/index.html
+++ b/index.html
@@ -13,24 +13,41 @@
     </header>
     <main>
       <div class="numberScore">
-        <img src="IMG_20241008_182926_542.jpg" alt="" srcset="">
+        <img src="IMG_20241008_182926_542.jpg" alt="" srcset="" class="sakeh">
         <h1 class="score"></h1>
       </div>
       <div class="tap-score img2"></div>
     </main>
 
     <footer>
-      <div class="cart">
-        <h1>Cart</h1>
-      </div>
-      <div class="cart">
-        <h1>Home</h1>
-      </div>
-      <div class="cart">
-        <h1>Task</h1>
+        <h1 class="cart">Cart</h1>
+        <h1 class="cart">Home</h1>
+        <h1 class="cart active">Task</h1>
+      <div class="makhfi">
+        <div class="cc"  data-anerje="anerje">
+          <span>anerje</span>
+          <div>
+            <img src="IMG_20241008_182926_542.jpg" alt="" srcset="" class="sakeh">
+            <span class="amteyaz-khared">3,000</span>
+
+          </div>
+        </div>
+        <div class="cc" data-anerje="tap">
+                    <span>tap</span>
+          <div>
+            <img src="IMG_20241008_182926_542.jpg" alt="" srcset="" class="sakeh">
+            <span class="amteyaz-khared">1,000</span>
+
+          </div></div>
+        <div class="cc active" data-anerje="sada">
+                    <span>sada</span>
+          <div>
+            <img src="IMG_20241008_182926_542.jpg" alt="" srcset="" class="sakeh">
+            <span class="amteyaz-khared">60,000</span>
+
+          </div></div>
       </div>
     </footer>
-
 
     <script src="script.js"></script>
   </body>
